[package]
name = "culine"
version = "0.1.0"
authors = ["Jrester <jrester379@gmail.com>", "DeeJayBro <info@deejaybro.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
reqwest = "0.10.8"
scraper = "0.12.0"
serde_json = "1.0"
serde = { version = "1.0.117",  features = ["derive"] }